syntax = "proto3";
package helium.mapper;

import "mapper_gps.proto";

message mapper_scan {
  oneof version { mapper_scan_v1 scan_v1 = 1; }
}

message mapper_scan_v1 {
  uint32 scan_counter = 1;
  mapper_gps_v1 gps = 2;
  repeated mapper_scan_result results = 3;
}

message mapper_scan_result {
  // 28-bit (UMTS, LTE) or 36-bit (5G NR)
  uint64 cid = 1;
  // PLMN = (MCC << 16) | MNC
  uint32 plmn = 2;
  // EARFCN or UARFCN
  uint32 fcn = 3;
  uint32 pci = 4;
  // RSRQ in units of 0.1 dB
  int32 rsrp = 5;
  // RSRP in units of 0.1 dBm
  int32 rsrq = 6;
}
